<resources>
	<string name="app_name">AnswerButton</string>
	<string name="australia_question">What is the capital of Australia?</string>
	<string name="australia_answer_brisbane">Brisbane</string>
	<string name="australia_answer_canberra">Canberra</string>
	<string name="australia_answer_perth">Perth</string>
	<string name="australia_answer_sydney">Sydney</string>
	<string name="disable_button_text">Disable</string>
	<string name="reset_button_text">Reset</string>
</resources>
