<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/question_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/australia_question"
		android:textSize="18sp"
		app:layout_constraintBottom_toTopOf="@id/answer_layout"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/answer_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@id/admin_layout"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/question_text_view">

		<Button
			android:id="@+id/answer_0_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/australia_answer_brisbane" />

		<Button
			android:id="@+id/answer_1_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/australia_answer_canberra" />

		<Button
			android:id="@+id/answer_2_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/australia_answer_perth" />

		<Button
			android:id="@+id/answer_3_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/australia_answer_sydney" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/admin_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/answer_layout">

		<Button
			android:id="@+id/disable_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/disable_button_text"
			style="?android:attr/buttonBarButtonStyle" />

		<Button
			android:id="@+id/reset_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/reset_button_text"
			style="?android:attr/buttonBarButtonStyle" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
